--- a/src/features/userList/pages/UserListPage/UserListPage.module.scss
+++ b/src/features/userList/pages/UserListPage/UserListPage.module.scss
@@ -1,14 +1,51 @@
 .UserListPage {
   display: flex;
-  gap: 20px;
   flex-direction: column;
-
+  padding-bottom: 100px;
 }
 
 .userList {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
   justify-content: center;
   align-items: center;
+  padding: 48px 80px;
+  gap: 20px;
+  @media (max-width: 600px) {
+    padding: 20px 10px;
+  }
+}
+
+.bigTitle {
+  margin-top: 64px;
+  font-size: 64px;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  max-width: 846px;
+  @media (max-width: 600px) {
+    font-size: 38px;
+  }
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 400;
+  color: #ddd;
+  text-align: center;
+  max-width: 846px;
+  @media (max-width: 600px) {
+    font-size: 16px;
+  }
+}
+
+.header {
+  position: relative;
+  background-color: #512689;
+  min-height: 265px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  padding: 0 16px 16px 16px;
 }
