--- a/src/ui/Paginator/Paginator.module.scss
+++ b/src/ui/Paginator/Paginator.module.scss
@@ -11,6 +11,11 @@
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  transition: transform 200ms;
+
+  &:hover {
+    transform: scale(1.5);
+  }
 }
 
 .activeButton {
