--- a/src/features/userList/components/UserCard/UserCard.module.scss
+++ b/src/features/userList/components/UserCard/UserCard.module.scss
@@ -1,4 +1,5 @@
 .UserCard {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,3 +33,19 @@
 
 }
 
+.like {
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  width: 30px;
+  height: 30px;
+  background-color: #F8F8F8;
+  border: none;
+  transition: transform 200ms;
+  cursor: pointer;
+  border-radius: 4px;
+
+  &:hover {
+    transform: scale(1.6);
+  }
+}
